# multi-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
config/: default.yaml
scripts/: setup-dev.sh
src/code2e/: __init__.py  __main__.py
src/code2e/agents/: advisor.py  base.py  evaluator.py  executor.py  planner.py
src/code2e/cli/: __main__.py  app.py  chat_server.py
src/code2e/cli/chat_ui/: index.html
src/code2e/cli/commands/: cassettes.py  chat.py  cost.py  diff.py  doctor.py  init.py  inspect.py  logs.py  (+4 more)
src/code2e/core/: budget.py  cassette.py  checkpoint.py  event_emitter.py  hooks.py  llm_gateway.py  logger.py  orchestrator.py  port_allocator.py  process_manager.py  schemas.py  state.py  termination.py  workspace.py
src/code2e/prompts/: advisor.md  evaluator_testgen.md  executor.md  planner_round_1.md  planner_round_2.md  planner_round_3.md
src/code2e/reports/: index.html.j2
src/code2e/runners/: base.py  playwright_runner.py
src/code2e/ui/: jsonl.py  pretty.py
tests/: test_advisor.py  test_budget.py  test_cassette.py  test_checkpoint.py  test_cli_doctor.py  test_cli_inspect.py  test_cli_logs_cost_diff.py  test_cli_run.py  test_cli_runs.py  test_evaluator.py  test_evaluator_testrun.py  test_executor.py  test_llm_gateway.py  test_orchestrator_phase1.py  test_orchestrator_phase2.py  test_orchestrator_phase3.py  test_orchestrator_phase_launch.py  test_orchestrator_pure.py  test_orchestrator_start.py  test_planner.py  test_playwright_runner.py  test_port_allocator.py  test_process_manager.py  test_smoke.py  test_workspace.py
